--- a/appsettings.json
+++ b/appsettings.json
@@ -1,17 +1,8 @@
 {
-  
-    "ConnectionStrings": {
-      "DefaultConnection": "server=localhost;database=webbilling;user=root;password=;",
-      "BillingDb": "server=localhost;database=webbilling;user=root;password=;"
-    }
-  ,
-  
-    "PayPal": {
-        "ClientId": "AdXHEP1jTg0J_HDMelGoKzkmXiJqg65ZVFa8ibAfReLDAq0XecE9z0bGuVfNjLFHtIxOkd-0Mr142NJt",
-        "ClientSecret": "EBkxRjpt0YuacBgg5WwX2S6tDSu7xV-gcovLblYrpsTzeBurBqP_3P3CUEfqaNUhREvaZeYzYVhotyn8",
-        "Mode": "sandbox" 
-    }
-,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-SGGSMIVH;Database=IdentityDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "BillingDb": "Server=LAPTOP-SGGSMIVH;Database=BillingDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
 
   "Logging": {
     "LogLevel": {
